terraform/main.tf
# main.tf

provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "mws_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "mws-vpc"
  }
}

resource "aws_internet_gateway" "mws_igw" {
  vpc_id = aws_vpc.mws_vpc.id

  tags = {
    Name = "mws-igw"
  }
}

resource "aws_subnet" "public_1" {
  vpc_id                  = aws_vpc.mws_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name                               = "mws-public-1"
    "kubernetes.io/cluster/mws-cluster" = "shared"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id                  = aws_vpc.mws_vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name                               = "mws-public-2"
    "kubernetes.io/cluster/mws-cluster" = "shared"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.mws_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.mws_igw.id
  }

  tags = {
    Name = "mws-public-rt"
  }
}
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public_rt.id
}
